# runtara

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  docker-compose.yml  rust-toolchain.toml  start.sh
.cargo/: config.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
crates/durable-example/: Cargo.toml  README.md
crates/durable-examples-embedded/: Cargo.toml
crates/durable-examples-embedded/src/: lib.rs
crates/runtara-agent-ai-tools/: Cargo.toml
crates/runtara-agent-ai-tools/src/: lib.rs
crates/runtara-agent-azure-blob-storage/: Cargo.toml
crates/runtara-agent-azure-blob-storage/src/: lib.rs
crates/runtara-agent-bedrock/: Cargo.toml  build.rs
crates/runtara-agent-bedrock/src/: bindings.rs  lib.rs
crates/runtara-agent-bundle-emit/: Cargo.toml
crates/runtara-agent-bundle-emit/src/: main.rs
crates/runtara-agent-compression/: Cargo.toml
crates/runtara-agent-compression/src/: lib.rs
crates/runtara-agent-compression/wit/: agent.wit
crates/runtara-agent-crypto/: Cargo.toml
crates/runtara-agent-crypto/src/: lib.rs
crates/runtara-agent-crypto/wit/: agent.wit
crates/runtara-agent-csv/: Cargo.toml
crates/runtara-agent-csv/src/: lib.rs
crates/runtara-agent-csv/wit/: agent.wit
crates/runtara-agent-datetime/: Cargo.toml
crates/runtara-agent-datetime/src/: bindings.rs  lib.rs
crates/runtara-agent-encoding/: Cargo.toml
crates/runtara-agent-encoding/src/: lib.rs
crates/runtara-agent-http/: Cargo.toml
crates/runtara-agent-http/src/: bindings.rs  lib.rs
crates/runtara-agent-hubspot/: Cargo.toml
crates/runtara-agent-hubspot/src/: lib.rs
crates/runtara-agent-macro/: Cargo.toml  README.md
crates/runtara-agent-macro/src/: lib.rs
crates/runtara-agent-macro/tests/: connection_conditions.rs
crates/runtara-agent-mailgun/: Cargo.toml
crates/runtara-agent-mailgun/src/: bindings.rs  lib.rs
crates/runtara-agent-object-model/: Cargo.toml
crates/runtara-agent-object-model/src/: bindings.rs  lib.rs
crates/runtara-agent-openai/: Cargo.toml
crates/runtara-agent-openai/src/: lib.rs
crates/runtara-agent-s3-storage/: Cargo.toml
crates/runtara-agent-s3-storage/src/: bindings.rs  lib.rs
crates/runtara-agent-sftp/: Cargo.toml
crates/runtara-agent-sftp/src/: lib.rs
crates/runtara-agent-sharepoint/: Cargo.toml
crates/runtara-agent-sharepoint/src/: lib.rs
crates/runtara-agent-shopify/: Cargo.toml
crates/runtara-agent-shopify/src/: lib.rs
crates/runtara-agent-slack/: Cargo.toml
crates/runtara-agent-slack/src/: bindings.rs  lib.rs
crates/runtara-agent-slack/wit/: agent.wit
crates/runtara-agent-stripe/: Cargo.toml
crates/runtara-agent-stripe/src/: bindings.rs  lib.rs
crates/runtara-agent-text/: Cargo.toml
crates/runtara-agent-text/fixtures/: render-template.json
crates/runtara-agent-text/src/: bindings.rs  lib.rs
crates/runtara-agent-transform/: Cargo.toml
crates/runtara-agent-transform/src/: bindings.rs  lib.rs
crates/runtara-agent-utils/: Cargo.toml
crates/runtara-agent-utils/src/: bindings.rs  lib.rs
crates/runtara-agent-wit/: Cargo.toml  README.md
crates/runtara-agent-wit/src/: lib.rs
crates/runtara-agent-wit/templates/: agent.wit.in
crates/runtara-agent-wit/wit/: deps.toml  runtara-agent.wit
crates/runtara-agent-xlsx/: Cargo.toml
crates/runtara-agent-xlsx/src/: bindings.rs  lib.rs
crates/runtara-agent-xml/: Cargo.toml
crates/runtara-agent-xml/src/: bindings.rs  lib.rs
crates/runtara-agent-xml/wit/: agent.wit
dev/: README.md  docker-compose.yml  init-db.sql
docker/: .gitignore  Dockerfile
docs/: agent-entitlements-removal-plan.md  agent-extraction-plan.md  ai-provider-config.md  bulk-and-split-changes.md  channel-session-reflush-provenance-plan.md  compiled-expressions.md  connection-page-ux-plan.md  connections-refactor-plan.md  cross-platform.md  data-source-input-envelope.md  debug-events.md  direct-compilation-architecture.md  dsl_spec.json  e2e-testing-for-agents.md  embeddable-cores.md  embedding-runtara.md  entitlements.md  environment-restart-recovery.md  frontend-css-audit-2026-07-24.md  gap-resolution.md  graph-replay-plan.md  install.md  memory-benchmarking.md  oauth2-extension-plan.md  object-model-raw-sql-plan-2026-07-03.md  object-store-connection-pooling.md  quickbooks-agent-plan.md  quickbooks-typed-layer-plan.md  report-block-joins-future-work.md  report-runtime-platform-roadmap.md  reporting-datasets-demo.json  reporting-module-spec.md  reports-dsl-audit-2026-07-03.md  reports-file-upload-block-plan.md  reports-refactoring-plan.md  retry-backoff-durability-fix-plan.md  security.md  sqs-agent-plan.md  structured-errors.md  suggested-improvements.md  (+24 more)
e2e/: measure_latency.sh  run_all.sh  test_basic_workflow.sh  test_channel_reflush_provenance.sh  test_connection_ref_workflow.sh  test_delay_workflow.sh  test_mcp_agent.sh  test_memory_benchmark.sh  test_negative_duration_on_resume.sh  test_obm_query_by_id_workflow.sh  test_obm_sql_workflow.sh  test_recovery_environment_restart.sh  test_report_file_upload_block.sh  test_smo_categorization_workflow.sh  test_smo_fts_match.sh  test_smo_report_chart_perf.sh  test_smo_trigram_similarity.sh  test_smo_vector_search.sh  test_teams_inbound_webhook.sh  test_teams_send_message.sh  test_trigger_replay_idempotency.sh  test_workflow_agent_parity.sh
examples/: README.md  index.json  seed.py
json-examples/: README.md  failing_case.json  minimal_control.json  topology_control.json
prototypes/: report-builder-ux-prototype.html  report-builder-ux.html
scripts/: add_license_headers.py  bootstrap-install.sh  build-agent-components.sh  build-bundle.sh  build-deb.sh  build_loan_audit_report.py  build_native_library.sh  clean-target.sh  fix_case_consistency.py  import_object_schemas.py  install.sh  measure_memory.py  regenerate-workflow-vendor.sh  release.sh  seed_mock_case_data.py  test-install-vm.sh  test-valkey-tls.sh  update-bedrock-models.py  update-version.sh
(+2148 files in other folders)
