[workspace]
resolver = "2"
members = [
    "crates/runtara-core",
    "crates/runtara-environment",
    "crates/runtara-management-sdk",
    "crates/runtara-sdk",
    "crates/runtara-sdk-macros",
    # Workflow compilation library
    "crates/runtara-dsl",
    "crates/runtara-workflows",
    "crates/runtara-agents",
    "crates/runtara-ai",
    "crates/runtara-http",
    "crates/runtara-workflow-stdlib",
    "crates/runtara-agent-macro",
    # Agent testing
    "crates/runtara-test-harness",
    # Text parsing
    "crates/runtara-text-parser",
    # Connection management
    "crates/runtara-connections",
    # HTTP API server
    "crates/runtara-server",
    # Object model storage
    "crates/runtara-object-store",
]
default-members = ["crates/runtara-core"]

[workspace.package]
edition = "2024"
version = "4.6.7"
license = "AGPL-3.0-or-later"
repository = "https://github.com/runtarahq/runtara"
homepage = "https://runtara.com"
keywords = ["durable", "workflow", "checkpoint", "execution"]
categories = ["asynchronous", "development-tools"]

[workspace.dependencies]
runtara-http = { path = "crates/runtara-http", version = "4.6" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
# Vendored OpenSSL for musl static builds
openssl = { version = "0.10", features = ["vendored"] }
