[workspace]
resolver = "2"
members = [
    "crates/runtara-core",
    "crates/runtara-environment",
    "crates/runtara-management-sdk",
    "crates/runtara-sdk",
    "crates/runtara-sdk-macros",
    # Workflow compilation library
    "crates/runtara-dsl",
    "crates/runtara-workflows",
    "crates/runtara-workflow-validation-wasm",
    "crates/runtara-agents",
    "crates/runtara-ai",
    "crates/runtara-http",
    "crates/runtara-workflow-stdlib",
    "crates/runtara-agent-macro",
    # Agent testing
    "crates/runtara-test-harness",
    # Text parsing
    "crates/runtara-text-parser",
    # Connection management
    "crates/runtara-connections",
    # HTTP API server
    "crates/runtara-server",
    # Object model storage
    "crates/runtara-object-store",
    # Reports DSL: schema + minijinja + condition evaluator (server-side, also compiled to WASM)
    "crates/runtara-report-dsl",
    # WASM Component Model migration — see docs/wasm-components-migration-plan.md
    "crates/runtara-agent-wit",
    "crates/runtara-component-host",
    "crates/runtara-agent-crypto",
    "crates/runtara-agent-xml",
    "crates/runtara-agent-csv",
    "crates/runtara-agent-utils",
    "crates/runtara-agent-datetime",
    "crates/runtara-agent-transform",
    "crates/runtara-agent-text",
    "crates/runtara-agent-http",
    "crates/runtara-agent-mailgun",
    "crates/runtara-agent-slack",
    "crates/runtara-agent-openai",
    "crates/runtara-agent-ai-tools",
    "crates/runtara-agent-bedrock",
    "crates/runtara-agent-object-model",
    "crates/runtara-agent-s3-storage",
    "crates/runtara-agent-azure-blob-storage",
    "crates/runtara-agent-sharepoint",
    "crates/runtara-agent-stripe",
    "crates/runtara-agent-hubspot",
    "crates/runtara-agent-shopify",
]
default-members = ["crates/runtara-core"]

[workspace.package]
edition = "2024"
version = "5.1.1"
license = "AGPL-3.0-or-later"
repository = "https://github.com/runtarahq/runtara"
homepage = "https://runtara.com"
keywords = ["durable", "workflow", "checkpoint", "execution"]
categories = ["asynchronous", "development-tools"]

[workspace.dependencies]
runtara-http = { path = "crates/runtara-http", version = "5.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
# Vendored OpenSSL for musl static builds
openssl = { version = "0.10", features = ["vendored"] }

# Size-tuned profile for `wasm-pack build --release` outputs (Phase 2 of the
# reports refactor — see docs/reports-refactoring-plan.md). `runtara-report-dsl`
# compiles to WASM and ships to the frontend; size matters more than build
# speed.
[profile.release.package.runtara-report-dsl]
opt-level = "z"
codegen-units = 1
