[workspace]
resolver = "2"
members = [
    "crates/runtara-core",
    "crates/runtara-environment",
    "crates/runtara-management-sdk",
    "crates/runtara-sdk",
    "crates/runtara-sdk-macros",
    # Workflow compilation library
    "crates/runtara-dsl",
    "crates/runtara-workflows",
    "crates/runtara-validation-wasm",
    "crates/runtara-agents",
    "crates/runtara-ai",
    "crates/runtara-http",
    "crates/runtara-workflow-stdlib",
    "crates/runtara-workflow-runtime",
    "crates/runtara-agent-macro",
    # Shared character-encoding vocabulary + detection/decoding for WASM agents
    "crates/runtara-agent-encoding",
    # Text parsing
    "crates/runtara-text-parser",
    # Connection management
    "crates/runtara-connections",
    # HTTP API server
    "crates/runtara-server",
    # Object model storage
    "crates/runtara-object-store",
    # Reports DSL: schema + minijinja + condition evaluator (server-side, also compiled to WASM)
    "crates/runtara-report-dsl",
    # WASM Component Model migration — see docs/wasm-components-migration-plan.md
    "crates/runtara-agent-wit",
    "crates/runtara-workflow-wit",
    "crates/runtara-component-host",
    "crates/agents/runtara-agent-crypto",
    "crates/agents/runtara-agent-xml",
    "crates/agents/runtara-agent-csv",
    "crates/agents/runtara-agent-utils",
    "crates/agents/runtara-agent-datetime",
    "crates/agents/runtara-agent-transform",
    "crates/agents/runtara-agent-text",
    "crates/agents/runtara-agent-http",
    "crates/agents/runtara-agent-mailgun",
    "crates/agents/runtara-agent-slack",
    "crates/agents/runtara-agent-openai",
    "crates/agents/runtara-agent-ai-tools",
    "crates/agents/runtara-agent-bedrock",
    "crates/agents/runtara-agent-object-model",
    "crates/agents/runtara-agent-s3-storage",
    "crates/agents/runtara-agent-sqs",
    "crates/agents/runtara-agent-azure-blob-storage",
    "crates/agents/runtara-agent-sharepoint",
    "crates/agents/runtara-agent-stripe",
    "crates/agents/runtara-agent-hubspot",
    "crates/agents/runtara-agent-quickbooks",
    "crates/agents/runtara-agent-shopify",
    "crates/agents/runtara-agent-sftp",
    "crates/agents/runtara-agent-compression",
    "crates/agents/runtara-agent-mcp",
    "crates/agents/runtara-agent-xlsx",
    # Build tool: emits per-agent meta.json siblings to each .wasm by walking
    # the macro-emitted statics in every agent crate. Run by
    # scripts/build-agent-components.sh after `cargo component build`.
    "crates/runtara-agent-bundle-emit",
]
default-members = ["crates/runtara-core"]

[workspace.package]
edition = "2024"
version = "8.6.2"
license = "AGPL-3.0-or-later"
repository = "https://github.com/runtarahq/runtara"
homepage = "https://runtara.com"
keywords = ["durable", "workflow", "checkpoint", "execution"]
categories = ["asynchronous", "development-tools"]

[workspace.dependencies]
runtara-http = { path = "crates/runtara-http", version = "8.6", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
# Character-encoding detection + decoding, shared by the text/csv/xml agents
# through `runtara-agent-encoding`. encoding_rs is the WHATWG label/alias table
# and decoder; chardetng (same upstream) is the statistical detector and returns
# an `encoding_rs::Encoding`, so the two share one vocabulary.
encoding_rs = "0.8"
chardetng = "1.0"
# Vendored OpenSSL for musl static builds
openssl = { version = "0.10", features = ["vendored"] }

# Size-tuned profile for `wasm-pack build --release` outputs (Phase 2 of the
# reports refactor — see docs/reports-refactoring-plan.md). `runtara-report-dsl`
# compiles to WASM and ships to the frontend; size matters more than build
# speed.
[profile.release.package.runtara-report-dsl]
opt-level = "z"
codegen-units = 1
