[package]
name = "durable-example"
description = "Example applications showcasing runtara-sdk use-cases"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
runtara-sdk = { path = "../runtara-sdk" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "basic_example"
path = "src/bin/basic_example.rs"

[[bin]]
name = "checkpoint_example"
path = "src/bin/checkpoint_example.rs"

[[bin]]
name = "sleep_example"
path = "src/bin/sleep_example.rs"

[[bin]]
name = "signal_example"
path = "src/bin/signal_example.rs"

[[bin]]
name = "error_example"
path = "src/bin/error_example.rs"

[[bin]]
name = "http_example"
path = "src/bin/http_example.rs"

[[bin]]
name = "durable_macro_example"
path = "src/bin/durable_macro_example.rs"

[[bin]]
name = "durable_advanced_example"
path = "src/bin/durable_advanced_example.rs"
