[package]
name = "runtara-agent-azure-blob-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Azure Blob Storage integration agent — WebAssembly Component"
keywords = ["wasm", "component", "agent", "azure", "storage"]
categories = ["wasm", "web-programming::http-client"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
runtara-http = { path = "../runtara-http" }

[package.metadata.component]
package = "runtara:agent-azure-blob-storage"

[package.metadata.component.target]
path = "../runtara-agent-wit/wit"
world = "agent"
