[package]
name = "runtara-agent-bundle-emit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Walks every runtara-agent-* crate's macro-emitted metadata and writes a sibling meta.json next to each .wasm."
keywords = ["wasm", "component", "agent", "build"]
categories = ["development-tools::build-utils"]

[[bin]]
name = "emit-meta"
path = "src/main.rs"

[dependencies]
runtara-dsl = { path = "../runtara-dsl" }
runtara-agent-ai-tools = { path = "../agents/runtara-agent-ai-tools" }
runtara-agent-azure-blob-storage = { path = "../agents/runtara-agent-azure-blob-storage" }
runtara-agent-bedrock = { path = "../agents/runtara-agent-bedrock" }
runtara-agent-compression = { path = "../agents/runtara-agent-compression" }
runtara-agent-crypto = { path = "../agents/runtara-agent-crypto" }
runtara-agent-csv = { path = "../agents/runtara-agent-csv" }
runtara-agent-datetime = { path = "../agents/runtara-agent-datetime" }
runtara-agent-http = { path = "../agents/runtara-agent-http" }
runtara-agent-hubspot = { path = "../agents/runtara-agent-hubspot" }
runtara-agent-quickbooks = { path = "../agents/runtara-agent-quickbooks" }
runtara-agent-mailgun = { path = "../agents/runtara-agent-mailgun" }
runtara-agent-mcp = { path = "../agents/runtara-agent-mcp" }
runtara-agent-object-model = { path = "../agents/runtara-agent-object-model" }
runtara-agent-openai = { path = "../agents/runtara-agent-openai" }
runtara-agent-s3-storage = { path = "../agents/runtara-agent-s3-storage" }
runtara-agent-sqs = { path = "../agents/runtara-agent-sqs" }
runtara-agent-sftp = { path = "../agents/runtara-agent-sftp" }
runtara-agent-sharepoint = { path = "../agents/runtara-agent-sharepoint" }
runtara-agent-shopify = { path = "../agents/runtara-agent-shopify" }
runtara-agent-slack = { path = "../agents/runtara-agent-slack" }
runtara-agent-teams = { path = "../agents/runtara-agent-teams" }
runtara-agent-stripe = { path = "../agents/runtara-agent-stripe" }
runtara-agent-text = { path = "../agents/runtara-agent-text" }
runtara-agent-transform = { path = "../agents/runtara-agent-transform" }
runtara-agent-utils = { path = "../agents/runtara-agent-utils" }
runtara-agent-xlsx = { path = "../agents/runtara-agent-xlsx" }
runtara-agent-xml = { path = "../agents/runtara-agent-xml" }
serde_json = { workspace = true }
anyhow = "1"
