[package]
name = "runtara-agent-compression"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Compression agent — thin wrapper that proxies to the host's native zip handler"
keywords = ["wasm", "component", "agent", "compression"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }
serde = { workspace = true }
serde_json = { workspace = true }
# runtara-http compiles host-side (ureq) and wasm-side (wasi); the wasm build
# uses `.call()` (direct, no proxy) to POST the forwarded request to the host's
# internal native-agent endpoint at
# `$RUNTARA_AGENT_SERVICE_URL/<module>/<capability>` (e.g.
# `http://127.0.0.1:7002/api/internal/agents/compression/create-archive`).
runtara-http = { path = "../runtara-http" }
# Capability metadata stays beside the code: `#[capability_input]`,
# `#[capability_output]`, `#[capability]` emit `&'static CapabilityMeta` /
# `&'static InputTypeMeta` / `&'static OutputTypeMeta` items, and the host-only
# `agent_info()` fn collects them into a `runtara_dsl::agent_meta::AgentInfo`.
# A workspace `emit-meta` binary then serializes that to `meta.json` next to
# the `.wasm` — the JSON is a build artifact, never hand-edited.
runtara-agent-macro = { path = "../runtara-agent-macro" }
runtara-dsl = { path = "../runtara-dsl", default-features = false }
strum = { version = "0.26", features = ["derive"] }

[package.metadata.component]
package = "runtara:agent-compression"

[package.metadata.component.target]
path = "../runtara-agent-wit/wit"
world = "agent"
