[package]
name = "runtara-agent-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Crypto agent — hashing and HMAC — as a WebAssembly component"
keywords = ["wasm", "component", "agent", "crypto"]
categories = ["wasm", "cryptography"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
sha1 = "0.10"
md-5 = "0.10"
hmac = { workspace = true }
# Capability metadata stays beside the code: `#[capability_input]`,
# `#[capability_output]`, `#[capability]` emit `&'static CapabilityMeta` /
# `&'static InputTypeMeta` / `&'static OutputTypeMeta` items, and the host-only
# `agent_info()` fn collects them into a `runtara_dsl::agent_meta::AgentInfo`.
# A workspace `emit-meta` binary then serializes that to `meta.json` next to
# the `.wasm` — the JSON is a build artifact, never hand-edited.
runtara-agent-macro = { path = "../runtara-agent-macro" }
runtara-dsl = { path = "../runtara-dsl", default-features = false }
strum = { version = "0.26", features = ["derive"] }

[package.metadata.component]
package = "runtara:agent-crypto"

[package.metadata.component.target]
path = "../runtara-agent-wit/wit"
world = "agent"
