[package]
name = "runtara-agent-datetime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DateTime agent — date/time manipulation — as a WebAssembly component"
keywords = ["wasm", "component", "agent", "datetime"]
categories = ["wasm", "date-and-time"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = "0.10"

[package.metadata.component]
package = "runtara:agent-datetime"

[package.metadata.component.target]
path = "../runtara-agent-wit/wit"
world = "agent"
