[package]
name = "runtara-agent-object-model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Object Model CRUD agent — WebAssembly Component"
keywords = ["wasm", "component", "agent", "object-model"]
categories = ["wasm", "database"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }
serde = { workspace = true }
serde_json = { workspace = true }
runtara-http = { path = "../runtara-http" }

[package.metadata.component]
package = "runtara:agent-object-model"

[package.metadata.component.target]
path = "../runtara-agent-wit/wit"
world = "agent"
