[package]
name = "runtara-agent-openai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAI integration agent — WebAssembly Component"
keywords = ["wasm", "component", "agent", "openai", "llm"]
categories = ["wasm", "web-programming::http-client"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }
serde = { workspace = true }
serde_json = { workspace = true }
# runtara-http compiles host-side (ureq) and wasm-side (wasi); the wasm build
# routes through the proxy via the `X-Runtara-Connection-Id` header so the
# OpenAI API key never enters the .wasm binary.
runtara-http = { path = "../runtara-http" }
# Capability metadata stays beside the code: `#[capability_input]`,
# `#[capability_output]`, `#[capability]` emit `&'static CapabilityMeta` /
# `&'static InputTypeMeta` / `&'static OutputTypeMeta` items, and the host-only
# `agent_info()` fn collects them into a `runtara_dsl::agent_meta::AgentInfo`.
# A workspace `emit-meta` binary then serializes that to `meta.json` next to
# the `.wasm` — the JSON is a build artifact, never hand-edited.
runtara-agent-macro = { path = "../runtara-agent-macro" }
runtara-dsl = { path = "../runtara-dsl", default-features = false }
strum = { version = "0.26", features = ["derive"] }

[package.metadata.component]
package = "runtara:agent-openai"

[package.metadata.component.target]
path = "wit"
world = "agent"

# The per-agent `wit/agent.wit` (generated by build.rs) references
# `runtara:agent/types@0.3.0` for the shared connection-info / error-info
# records. Point cargo-component at the shared package so the `use` resolves.
[package.metadata.component.target.dependencies]
"runtara:agent" = { path = "../runtara-agent-wit/wit" }
