[package]
name = "runtara-agent-slack"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Slack Bot agent — WebAssembly Component"
keywords = ["wasm", "component", "agent", "slack"]
categories = ["wasm", "web-programming::http-client"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
runtara-http = { path = "../runtara-http" }

[package.metadata.component]
package = "runtara:agent-slack"

[package.metadata.component.target]
path = "../runtara-agent-wit/wit"
world = "agent"
